# C-Wordle

./: CMake  CMakeLists.txt  README.md  outfile.txt  word1.txt
inc/: runtime_assert.h  wordle.h
src/: main.c  wordle.c
